# Vera--

./: .gitmodules  CMakeLists.txt
profiles/: boost  default  inspirel
scripts/: F001.lua  F002.lua  L001.lua  L002.lua  L003.lua  L004.lua  L005.lua  L006.lua  T001.lua  T002.lua  T003.lua  T003.tcl  T004.lua  T005.lua  T006.lua  T007.lua  T008.lua  T009.lua  T010.lua  T012.lua  T013.lua  T014.lua  T016.lua  T017.lua  T018.lua  T019.lua
src/: Exclusions.cpp  Exclusions.h  Interpreter.cpp  Interpreter.h  Parameters.cpp  Parameters.h  Profiles.cpp  Profiles.h  Reports.cpp  Reports.h  RootDirectory.cpp  RootDirectory.h  Rules.cpp  Rules.h  SourceFiles.cpp  SourceFiles.h  SourceLines.cpp  SourceLines.h  Tokens.cpp  Tokens.h  Transformations.cpp  Transformations.h  file.cpp  file.hpp  globals.hpp  main.cpp  problem.hpp
src/plugins/: Exclusions.cpp  Exclusions.h  Interpreter.cpp  Interpreter.h  Parameters.cpp  Parameters.h  Profiles.cpp  Profiles.h  Reports.cpp  Reports.h  RootDirectory.cpp  RootDirectory.h  Rules.cpp  Rules.h  Transformations.cpp  Transformations.h
src/structures/: SourceFiles.cpp  SourceFiles.h  SourceLines.cpp  SourceLines.h  Tokens.cpp  Tokens.h
